# modelpy-module

./: .gitignore  README.txt  main.py  pyproject.toml  requirements.txt  test.py
src/modelpy/: .gitignore  main.py  test.py
tests/: test.py
